Added CNAME and commented out advanced usage section until it's finished

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ this.Get[baseRoute / name / "BestSellers"] = o => repo.BestSellers();
   </div>
 </div>
 
-<div class="block">
+<!--<div class="block">
   <h2 class="title-divider"><span>Advanced <span class="de-em">Usage</span></span> <small>Leverage the unique possibilities of Graph Based Routing</small></h2>
   <div class="tabbable tabs-left vertical-tabs bold-tabs row">
     <ul class="nav nav-tabs nav-stacked col-sm-4 col-md-4">
@@ -260,4 +260,4 @@ this.Get[baseRoute / name / "BestSellers"] = o => repo.BestSellers();
       </div>          
     </div>
   </div>
-</div>
+</div>-->
