Improved styling and reworked the features page content slightly

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title:  Home
       <li> <a href="#tab2" data-toggle="tab">Centralised <small>Similar to Web API, MVC</small><i class="icon-angle-right"></i></a> </li>
     </ul>
     <div class="tab-content col-sm-8 col-md-8">
-      <div class="feature tab-pane active col-sm-12 col-md-12" id="tab1">
+      <div class="tab-pane active col-sm-12 col-md-12" id="tab1">
         <h3 class="title visible-phone">Configure Web API</h3>
         <pre class="prettyprint lang-cs">
 
@@ -81,7 +81,7 @@ public class HelloWorldModule : Superscribe.WebApi.Modules.SuperscribeModule
 }
         </pre>
       </div>
-      <div class="feature tab-pane col-sm-12 col-md-12" id="tab2">
+      <div class="tab-pane col-sm-12 col-md-12" id="tab2">
         <h3 class="title visible-phone">Default Web API Config</h3>
         <pre class="prettyprint lang-cs">
 
@@ -125,7 +125,7 @@ public static class WebApiConfig
       <li> <a href="#btab3" data-toggle="tab">Composing routes <small>Create definitions from reusable, strongly typed nodes</small><i class="icon-angle-right"></i></a> </li>
     </ul>
     <div class="tab-content col-sm-8 col-md-8">
-      <div class="feature tab-pane active col-sm-12 col-md-12" id="btab1">
+      <div class="tab-pane active col-sm-12 col-md-12" id="btab1">
         <h3 class="title visible-phone">Constant Matching</h3>
         <pre class="prettyprint lang-cs">
 
@@ -159,7 +159,7 @@ public static class WebApiConfig
 "api" / "values".Controller("Values") / -"SubFields".Action("GetSubFields")
         </pre>
       </div>
-      <div class="feature tab-pane col-sm-12 col-md-12" id="btab2">
+      <div class="tab-pane col-sm-12 col-md-12" id="btab2">
         <h3 class="title visible-phone">Example Routes</h3>
         <pre class="prettyprint lang-cs">
 
@@ -190,7 +190,7 @@ this.Get[ʅ / "api" / "Forms"] = o => formsRepository.All();
 this.Get[ʅ / "api" / "Forms" / (ʃLong)"formId"] = o => formsRepository.Get(o.Params.formId);
         </pre>
       </div>
-      <div class="feature tab-pane col-sm-12 col-md-12" id="btab3">
+      <div class="tab-pane col-sm-12 col-md-12" id="btab3">
       <h3 class="title visible-phone">Example Routes</h3>
         <pre class="prettyprint lang-cs">
 
