Fixed homepage and banner links

--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@ title:  Home
 <div class="block features">
   <h2 class="title-divider"><span>Why <span class="de-em">Superscribe?</span></span> <small>Superscribe is not your average routing framework.</small></h2>
   <div class="row">
-    <div class="feature col-sm-6 col-md-3 container"><a href="features.html"><img src="img/icons/Map.png" alt="Feature 1" class="img-responsive" /></a>
-      <h3 class="title"><a href="features.html">Hierarchical <span class="de-em">Routes</span></a></h3>
+    <div class="feature col-sm-6 col-md-3 container">
+      <img src="img/icons/Map.png" alt="Feature 1" class="img-responsive" />
+      <h3 class="title">Hierarchical <span class="de-em">Routes</span></h3>
       <p>Superscribe routes are defined hierarchically for ease of maintenance and efficient matching</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
-      <a href="features.html"><img src="img/icons/Pensils.png" alt="Feature 2" class="img-responsive" /></a>
-      <h3 class="title"><a href="features.html">Re-usable <span class="de-em">Definitions</span></a></h3>
+      <img src="img/icons/Pensils.png" alt="Feature 2" class="img-responsive" />
+      <h3 class="title">Re-usable <span class="de-em">Definitions</span></h3>
       <p>Each route segment definition is strongly typed... reduce code duplication by composing and re-using them however you like</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
-      <a href="features.html"><img src="img/icons/Clipboard.png" alt="Feature 3" class="img-responsive" /></a>
-      <h3 class="title"><a href="features.html">Flexible <span class="de-em">Approach</span></a></h3>
+      <img src="img/icons/Clipboard.png" alt="Feature 3" class="img-responsive" />
+      <h3 class="title">Flexible <span class="de-em">Approach</span></h3>
       <p>Like to have your routes defined near your handlers? Not a problem. Like to define routes centrally all in one place? That's fine.</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
-      <a href="features.html"><img src="img/icons/Infinity-Loop.png" alt="Feature 4" class="img-responsive" /></a>
-      <h3 class="title"><a href="features.html">No <span class="de-em">Limits</span></a></h3>
+      <img src="img/icons/Infinity-Loop.png" alt="Feature 4" class="img-responsive" />
+      <h3 class="title">No <span class="de-em">Limits</span></h3>
       <p>Execute arbitrary code as part of your routing pipeline to match routes, make choices or return responses using our powerful DSL... the possibilities are endless!</p>
     </div>
   </div>
