Added proper tab identifiers for index and features

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ title:  Home
   <h2 class="title-divider"><span>Getting <span class="de-em">Started</span></span> <small>How do you want to define your routes?</small></h2>
   <div class="tabbable tabs-left vertical-tabs bold-tabs row">
     <ul class="nav nav-tabs nav-stacked col-sm-4 col-md-4">
-      <li class="active"> <a href="#tab1" data-toggle="tab">Install<small>Download the libraries you need from Nuget</small><i class="icon-angle-right"></i></a> </li>
-      <li> <a href="#tab2" data-toggle="tab">Configure <small>Enable Superscribe with just a few lines of code</small><i class="icon-angle-right"></i></a> </li>
-      <li> <a href="#tab3" data-toggle="tab">Define <small>Start building your route definitions & handlers</small><i class="icon-angle-right"></i></a> </li>
+      <li class="active"> <a href="#install" data-toggle="tab">Install<small>Download the libraries you need from Nuget</small><i class="icon-angle-right"></i></a> </li>
+      <li> <a href="#configure" data-toggle="tab">Configure <small>Enable Superscribe with just a few lines of code</small><i class="icon-angle-right"></i></a> </li>
+      <li> <a href="#define" data-toggle="tab">Define <small>Start building your route definitions & handlers</small><i class="icon-angle-right"></i></a> </li>
     </ul>
     <div class="tab-content col-sm-8 col-md-8">
-      <div class="tab-pane active col-sm-12 col-md-12" id="tab1">
+      <div class="tab-pane active col-sm-12 col-md-12" id="install">
         <h3 class="title visible-phone">Superscribe Core</h3>
         <div class="nuget-badge">
           <p><code>PM&gt; Install-Package Superscribe</code></p>
@@ -52,7 +52,7 @@ title:  Home
           <p><code>PM&gt; Install-Package Superscribe.OWIN</code></p>
         </div>
       </div>
-      <div class="tab-pane col-sm-12 col-md-12" id="tab2">
+      <div class="tab-pane col-sm-12 col-md-12" id="configure">
         <h3 class="title visible-phone">Web API - Standard</h3>
         <pre class="prettyprint lang-cs">
 
@@ -92,7 +92,7 @@ public class Startup
 }
         </pre>
       </div>
-      <div class="tab-pane col-sm-12 col-md-12" id="tab3">
+      <div class="tab-pane col-sm-12 col-md-12" id="define">
         <h3 class="title visible-phone">Web API - Standard</h3>
         <pre class="prettyprint lang-cs">
 
