Simplified OwinHandler examples on homepage and in features

--- a/index.html
+++ b/index.html
@@ -95,16 +95,8 @@ title:  Home
       {
           // Define serialization for text/html
           var config = new SuperscribeOwinConfig();
-          config.MediaTypeHandlers.Add(
-              "text/html",
-              new MediaTypeHandler
-              {
-                  Read = (env, o) => { 
-                    using (var reader = new StreamReader(env.GetRequestBody())) 
-                      return reader.ReadToEnd();
-                  },
-                  Write = (env, o) => env.WriteResponse(o.ToString())
-              });
+          config.MediaTypeHandlers.Add("text/html", new MediaTypeHandler
+              { Write = (env, o) => env.WriteResponse(o.ToString()) });
 
           app.UseSuperscribeRouter(config)
               .UseSuperscribeHandler(config);
