--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@ title:  Home
   <div class="tabbable tabs-left vertical-tabs bold-tabs row">
     <ul class="nav nav-tabs nav-stacked col-sm-4 col-md-4">
       <li class="active"> <a href="#install" data-toggle="tab">Install<small>Download the libraries you need from Nuget</small><i class="icon-angle-right"></i></a> </li>
-      <li> <a href="#configure" data-toggle="tab">Configure <small>Enable Superscribe with just a few lines of code</small><i class="icon-angle-right"></i></a> </li>
-      <li> <a href="#define" data-toggle="tab">Define <small>Start building your route definitions & handlers</small><i class="icon-angle-right"></i></a> </li>
+      <li> <a href="#define" data-toggle="tab">Define <small>Start building your route definitions &amp; handlers</small><i class="icon-angle-right"></i></a> </li>
     </ul>
     <div class="tab-content col-sm-8 col-md-8">
       <div class="tab-pane active col-sm-12 col-md-12" id="install">
@@ -43,66 +42,18 @@ title:  Home
         <div class="nuget-badge">
           <p><code>PM&gt; Install-Package Superscribe</code></p>
         </div>
+        <h3 class="title visible-phone">OWIN</h3>
+        <div class="nuget-badge">
+          <p><code>PM&gt; Install-Package Superscribe.Owin</code></p>
+        </div>
         <h3 class="title visible-phone">Web API</h3>
         <div class="nuget-badge">
           <p><code>PM&gt; Install-Package Superscribe.WebApi</code></p>
         </div>
-        <h3 class="title visible-phone">OWIN</h3>
+        <h3 class="title visible-phone">Web API - OWIN Hosted</h3>
         <div class="nuget-badge">
-          <p><code>PM&gt; Install-Package Superscribe.OWIN</code></p>
+          <p><code>PM&gt; Install-Package Superscribe.WebApi.Owin</code></p>
         </div>
-      </div>
-      <div class="tab-pane col-sm-12 col-md-12" id="configure">
-        <h3 class="title visible-phone">Web API - Standard</h3>
-        <pre class="prettyprint lang-cs">
-
-  public static class WebApiConfig
-  {
-      public static void Register(HttpConfiguration config)
-      {
-          SuperscribeConfig.Register(config);
-      }
-  }
-        </pre>
-        <h3 class="title visible-phone">Web API - Modules</h3>
-        <pre class="prettyprint lang-cs">
-
-  public static class WebApiConfig
-  {
-      public static void Register(HttpConfiguration config)
-      {
-          SuperscribeConfig.RegisterModules(config);
-      }
-  }
-        </pre>
-        <h3 class="title visible-phone">OWIN Router</h3>
-        <pre class="prettyprint lang-cs">
-
-  public class Startup
-  {
-      public void Configuration(IAppBuilder app)
-      {
-          app.UseSuperscribeRouter(new SuperscribeOwinConfig());
-      }
-  }
-        </pre>
-      <h3 class="title visible-phone">OWIN Handler</h3>
-        <pre class="prettyprint lang-cs">
-
-  public class Startup
-  {
-      public void Configuration(IAppBuilder app)
-      {
-          // Define serialization for text/html
-          var config = new SuperscribeOwinConfig();
-          config.MediaTypeHandlers.Add("text/html", new MediaTypeHandler
-              { Write = (env, o) => env.WriteResponse(o.ToString()) });
-
-          app.UseSuperscribeRouter(config)
-              .UseSuperscribeHandler(config);
-      }
-  }
-        </pre>
       </div>
       <div class="tab-pane col-sm-12 col-md-12" id="define">
         <h3 class="title visible-phone">Web API</h3>
@@ -112,9 +63,8 @@ title:  Home
   {
       public static void Register(HttpConfiguration config)
       {
-          SuperscribeConfig.Register(config);
-
-          ʃ.Route(() => "api" / ʃ.Controller / -(ʃInt)"id");
+          var define = SuperscribeConfig.Register(config);
+          define.Route("api" / Any.Controller / -(Int)"id");
       }
   }
         </pre>
@@ -125,7 +75,7 @@ title:  Home
   {
       public HelloWorldModule()
       {
-          this.Get["/"] = ʅ => "Hello World!";
+          this.Get["/"] = o => "Hello World!";
       }
   }
 
@@ -133,7 +83,7 @@ title:  Home
   {
       public HelloWorldModule()
       {
-          this.Get["/"] = ʅ => "Hello World!";
+          this.Get["/"] = o => "Hello OWIN!";
       }
   }
         </pre>
@@ -144,15 +94,29 @@ title:  Home
   {
       public void Configuration(IAppBuilder app)
       {
-          app.UseSuperscribeRouter(new SuperscribeOwinConfig());
+          var define = OwinRouteEngineFactory.Create();
+          app.UseSuperscribeRouter(define);
 
           // Set up a route that will respond to both Web Api and Nancy 
-          ʃ.Route(ʅ => ʅ / "api" / (
-                ʅ / "webapi" * Pipeline.Action(o => o.UseWebApi(httpconfig))
-              | ʅ / "nancy" * Pipeline.Action(o => o.UseNancy())));
+          define.Pipeline("api/webapi").UseWebApi(httpconfig);
+          define.Pipeline("api/nancy").UseNancy();
       }
   }
-        </pre>        
+        </pre>   
+        <h3 class="title visible-phone">OWIN Handler</h3>
+        <pre class="prettyprint lang-cs">
+
+  public class Startup
+  {
+      public void Configuration(IAppBuilder app)
+      {
+          var define = OwinRouteEngineFactory.Create();
+          app.UseSuperscribeRouter(define).UseSuperscribeHandler(define);
+
+          define.Route("hello/world", o => "Hello World");
+      }
+  }
+        </pre>       
       </div> 
     </div> 
   </div>
